<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.managemoney.Register$PlaceholderFragment" >

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerLastName"
        android:layout_below="@+id/registerLastName"
        android:entries="@array/country_array"/>

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countrySpinner"
        android:layout_below="@+id/countrySpinner"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" 
        android:onClick="speakEmail"/>

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" 
        android:onClick="speakLastName">
    </EditText>

    <EditText
        android:id="@+id/registerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/registerLastName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" 
        android:onClick="speakName">

        <requestFocus />
        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerEmail"
        android:layout_below="@+id/registerEmail"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" 
        android:onClick="speakPassword"/>

    <Button
        android:id="@+id/registerSignUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:onClick="recordUser"
        android:text="@string/signup"/>

</RelativeLayout>
